--- a/src/scss/sprite/icon.scss
+++ b/src/scss/sprite/icon.scss
@@ -128,12 +128,12 @@ $retina-groups: ($015-group, $017-group, $018-group, $019-group, );
 /*
 The provided mixins are intended to be used with the array-like variables
 
-.icon-home {
-  @include sprite-width($icon-home);
+.demo-home {
+  @include sprite-width($demo-home);
 }
 
-.icon-email {
-  @include sprite($icon-email);
+.demo-email {
+  @include sprite($demo-email);
 }
 */
 @mixin sprite-width($sprite) {
@@ -168,10 +168,10 @@ The `retina-sprite` mixin sets up rules and a media query for a sprite/retina sp
 
 The media query is from CSS Tricks: https://css-tricks.com/snippets/css/retina-display-media-query/
 
-$icon-home-group: ('icon-home', $icon-home, $icon-home-2x, );
+$demo-home-group: ('demo-home', $demo-home, $demo-home-2x, );
 
-.icon-home {
-  @include retina-sprite($icon-home-group);
+.demo-home {
+  @include retina-sprite($demo-home-group);
 }
 */
 @mixin sprite-background-size($sprite) {
