update sprite & gulp-sass bug

--- a/src/scss/sprite/_bus.scss
+++ b/src/scss/sprite/_bus.scss
@@ -20,8 +20,8 @@ $bike-width: 36px;
 $bike-height: 35px;
 $bike-total-width: 74px;
 $bike-total-height: 72px;
-$bike-image: 'img/sprite';
-$bike: (0px, 0px, 0px, 0px, 36px, 35px, 74px, 72px, 'img/sprite', 'bike', );
+$bike-image: '/img/sprite';
+$bike: (0px, 0px, 0px, 0px, 36px, 35px, 74px, 72px, '/img/sprite', 'bike', );
 $bus-name: 'bus';
 $bus-x: 38px;
 $bus-y: 0px;
@@ -31,8 +31,8 @@ $bus-width: 36px;
 $bus-height: 35px;
 $bus-total-width: 74px;
 $bus-total-height: 72px;
-$bus-image: 'img/sprite';
-$bus: (38px, 0px, -38px, 0px, 36px, 35px, 74px, 72px, 'img/sprite', 'bus', );
+$bus-image: '/img/sprite';
+$bus: (38px, 0px, -38px, 0px, 36px, 35px, 74px, 72px, '/img/sprite', 'bus', );
 $car-name: 'car';
 $car-x: 0px;
 $car-y: 37px;
@@ -42,8 +42,8 @@ $car-width: 36px;
 $car-height: 35px;
 $car-total-width: 74px;
 $car-total-height: 72px;
-$car-image: 'img/sprite';
-$car: (0px, 37px, 0px, -37px, 36px, 35px, 74px, 72px, 'img/sprite', 'car', );
+$car-image: '/img/sprite';
+$car: (0px, 37px, 0px, -37px, 36px, 35px, 74px, 72px, '/img/sprite', 'car', );
 $bike-2x-name: 'bike@2x';
 $bike-2x-x: 0px;
 $bike-2x-y: 0px;
@@ -79,9 +79,9 @@ $car-2x-image: 'bus@2x.png';
 $car-2x: (0px, 74px, 0px, -74px, 72px, 70px, 148px, 144px, 'bus@2x.png', 'car@2x', );
 $spritesheet-width: 74px;
 $spritesheet-height: 72px;
-$spritesheet-image: 'img/sprite';
+$spritesheet-image: '/img/sprite';
 $spritesheet-sprites: ($bike, $bus, $car, );
-$spritesheet: (74px, 72px, 'img/sprite', $spritesheet-sprites, );
+$spritesheet: (74px, 72px, '/img/sprite', $spritesheet-sprites, );
 $retina-spritesheet-width: 148px;
 $retina-spritesheet-height: 144px;
 $retina-spritesheet-image: 'bus@2x.png';
