--- a/src/scss/sprite/_bus.scss
+++ b/src/scss/sprite/_bus.scss
@@ -20,8 +20,8 @@ $bike-width: 36px;
 $bike-height: 35px;
 $bike-total-width: 74px;
 $bike-total-height: 72px;
-$bike-image: '/img/sprite';
-$bike: (0px, 0px, 0px, 0px, 36px, 35px, 74px, 72px, '/img/sprite', 'bike', );
+$bike-image: '../img/sprite/bus.png';
+$bike: (0px, 0px, 0px, 0px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'bike', );
 $bus-name: 'bus';
 $bus-x: 38px;
 $bus-y: 0px;
@@ -31,8 +31,8 @@ $bus-width: 36px;
 $bus-height: 35px;
 $bus-total-width: 74px;
 $bus-total-height: 72px;
-$bus-image: '/img/sprite';
-$bus: (38px, 0px, -38px, 0px, 36px, 35px, 74px, 72px, '/img/sprite', 'bus', );
+$bus-image: '../img/sprite/bus.png';
+$bus: (38px, 0px, -38px, 0px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'bus', );
 $car-name: 'car';
 $car-x: 0px;
 $car-y: 37px;
@@ -42,8 +42,19 @@ $car-width: 36px;
 $car-height: 35px;
 $car-total-width: 74px;
 $car-total-height: 72px;
-$car-image: '/img/sprite';
-$car: (0px, 37px, 0px, -37px, 36px, 35px, 74px, 72px, '/img/sprite', 'car', );
+$car-image: '../img/sprite/bus.png';
+$car: (0px, 37px, 0px, -37px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'car', );
+$search-white-name: 'search-white';
+$search-white-x: 38px;
+$search-white-y: 37px;
+$search-white-offset-x: -38px;
+$search-white-offset-y: -37px;
+$search-white-width: 14px;
+$search-white-height: 16px;
+$search-white-total-width: 74px;
+$search-white-total-height: 72px;
+$search-white-image: '../img/sprite/bus.png';
+$search-white: (38px, 37px, -38px, -37px, 14px, 16px, 74px, 72px, '../img/sprite/bus.png', 'search-white', );
 $bike-2x-name: 'bike@2x';
 $bike-2x-x: 0px;
 $bike-2x-y: 0px;
@@ -53,8 +64,8 @@ $bike-2x-width: 72px;
 $bike-2x-height: 70px;
 $bike-2x-total-width: 148px;
 $bike-2x-total-height: 144px;
-$bike-2x-image: 'bus@2x.png';
-$bike-2x: (0px, 0px, 0px, 0px, 72px, 70px, 148px, 144px, 'bus@2x.png', 'bike@2x', );
+$bike-2x-image: '../img/sprite/bus@2x.png';
+$bike-2x: (0px, 0px, 0px, 0px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'bike@2x', );
 $bus-2x-name: 'bus@2x';
 $bus-2x-x: 76px;
 $bus-2x-y: 0px;
@@ -64,8 +75,8 @@ $bus-2x-width: 72px;
 $bus-2x-height: 70px;
 $bus-2x-total-width: 148px;
 $bus-2x-total-height: 144px;
-$bus-2x-image: 'bus@2x.png';
-$bus-2x: (76px, 0px, -76px, 0px, 72px, 70px, 148px, 144px, 'bus@2x.png', 'bus@2x', );
+$bus-2x-image: '../img/sprite/bus@2x.png';
+$bus-2x: (76px, 0px, -76px, 0px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'bus@2x', );
 $car-2x-name: 'car@2x';
 $car-2x-x: 0px;
 $car-2x-y: 74px;
@@ -75,18 +86,29 @@ $car-2x-width: 72px;
 $car-2x-height: 70px;
 $car-2x-total-width: 148px;
 $car-2x-total-height: 144px;
-$car-2x-image: 'bus@2x.png';
-$car-2x: (0px, 74px, 0px, -74px, 72px, 70px, 148px, 144px, 'bus@2x.png', 'car@2x', );
+$car-2x-image: '../img/sprite/bus@2x.png';
+$car-2x: (0px, 74px, 0px, -74px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'car@2x', );
+$search-white-2x-name: 'search-white@2x';
+$search-white-2x-x: 76px;
+$search-white-2x-y: 74px;
+$search-white-2x-offset-x: -76px;
+$search-white-2x-offset-y: -74px;
+$search-white-2x-width: 28px;
+$search-white-2x-height: 32px;
+$search-white-2x-total-width: 148px;
+$search-white-2x-total-height: 144px;
+$search-white-2x-image: '../img/sprite/bus@2x.png';
+$search-white-2x: (76px, 74px, -76px, -74px, 28px, 32px, 148px, 144px, '../img/sprite/bus@2x.png', 'search-white@2x', );
 $spritesheet-width: 74px;
 $spritesheet-height: 72px;
-$spritesheet-image: '/img/sprite';
-$spritesheet-sprites: ($bike, $bus, $car, );
-$spritesheet: (74px, 72px, '/img/sprite', $spritesheet-sprites, );
+$spritesheet-image: '../img/sprite/bus.png';
+$spritesheet-sprites: ($bike, $bus, $car, $search-white, );
+$spritesheet: (74px, 72px, '../img/sprite/bus.png', $spritesheet-sprites, );
 $retina-spritesheet-width: 148px;
 $retina-spritesheet-height: 144px;
-$retina-spritesheet-image: 'bus@2x.png';
-$retina-spritesheet-sprites: ($bike-2x, $bus-2x, $car-2x, );
-$retina-spritesheet: (148px, 144px, 'bus@2x.png', $retina-spritesheet-sprites, );
+$retina-spritesheet-image: '../img/sprite/bus@2x.png';
+$retina-spritesheet-sprites: ($bike-2x, $bus-2x, $car-2x, $search-white-2x, );
+$retina-spritesheet: (148px, 144px, '../img/sprite/bus@2x.png', $retina-spritesheet-sprites, );
 
 /*
 These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
@@ -99,7 +121,9 @@ $bus-group-name: 'bus';
 $bus-group: ('bus', $bus, $bus-2x, );
 $car-group-name: 'car';
 $car-group: ('car', $car, $car-2x, );
-$retina-groups: ($bike-group, $bus-group, $car-group, );
+$search-white-group-name: 'search-white';
+$search-white-group: ('search-white', $search-white, $search-white-2x, );
+$retina-groups: ($bike-group, $bus-group, $car-group, $search-white-group, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
