fixed sprite bug

--- a/src/scss/sprite/_bus.scss
+++ b/src/scss/sprite/_bus.scss
@@ -18,10 +18,10 @@ $bike-offset-x: 0px;
 $bike-offset-y: 0px;
 $bike-width: 36px;
 $bike-height: 35px;
-$bike-total-width: 74px;
+$bike-total-width: 112px;
 $bike-total-height: 72px;
 $bike-image: '../img/sprite/bus.png';
-$bike: (0px, 0px, 0px, 0px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'bike', );
+$bike: (0px, 0px, 0px, 0px, 36px, 35px, 112px, 72px, '../img/sprite/bus.png', 'bike', );
 $bus-name: 'bus';
 $bus-x: 38px;
 $bus-y: 0px;
@@ -29,10 +29,10 @@ $bus-offset-x: -38px;
 $bus-offset-y: 0px;
 $bus-width: 36px;
 $bus-height: 35px;
-$bus-total-width: 74px;
+$bus-total-width: 112px;
 $bus-total-height: 72px;
 $bus-image: '../img/sprite/bus.png';
-$bus: (38px, 0px, -38px, 0px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'bus', );
+$bus: (38px, 0px, -38px, 0px, 36px, 35px, 112px, 72px, '../img/sprite/bus.png', 'bus', );
 $car-name: 'car';
 $car-x: 0px;
 $car-y: 37px;
@@ -40,21 +40,43 @@ $car-offset-x: 0px;
 $car-offset-y: -37px;
 $car-width: 36px;
 $car-height: 35px;
-$car-total-width: 74px;
+$car-total-width: 112px;
 $car-total-height: 72px;
 $car-image: '../img/sprite/bus.png';
-$car: (0px, 37px, 0px, -37px, 36px, 35px, 74px, 72px, '../img/sprite/bus.png', 'car', );
+$car: (0px, 37px, 0px, -37px, 36px, 35px, 112px, 72px, '../img/sprite/bus.png', 'car', );
 $search-white-name: 'search-white';
-$search-white-x: 38px;
+$search-white-x: 76px;
 $search-white-y: 37px;
-$search-white-offset-x: -38px;
+$search-white-offset-x: -76px;
 $search-white-offset-y: -37px;
 $search-white-width: 14px;
 $search-white-height: 16px;
-$search-white-total-width: 74px;
+$search-white-total-width: 112px;
 $search-white-total-height: 72px;
 $search-white-image: '../img/sprite/bus.png';
-$search-white: (38px, 37px, -38px, -37px, 14px, 16px, 74px, 72px, '../img/sprite/bus.png', 'search-white', );
+$search-white: (76px, 37px, -76px, -37px, 14px, 16px, 112px, 72px, '../img/sprite/bus.png', 'search-white', );
+$user-name: 'user';
+$user-x: 38px;
+$user-y: 37px;
+$user-offset-x: -38px;
+$user-offset-y: -37px;
+$user-width: 36px;
+$user-height: 35px;
+$user-total-width: 112px;
+$user-total-height: 72px;
+$user-image: '../img/sprite/bus.png';
+$user: (38px, 37px, -38px, -37px, 36px, 35px, 112px, 72px, '../img/sprite/bus.png', 'user', );
+$user2-name: 'user2';
+$user2-x: 76px;
+$user2-y: 0px;
+$user2-offset-x: -76px;
+$user2-offset-y: 0px;
+$user2-width: 36px;
+$user2-height: 35px;
+$user2-total-width: 112px;
+$user2-total-height: 72px;
+$user2-image: '../img/sprite/bus.png';
+$user2: (76px, 0px, -76px, 0px, 36px, 35px, 112px, 72px, '../img/sprite/bus.png', 'user2', );
 $bike-2x-name: 'bike@2x';
 $bike-2x-x: 0px;
 $bike-2x-y: 0px;
@@ -62,10 +84,10 @@ $bike-2x-offset-x: 0px;
 $bike-2x-offset-y: 0px;
 $bike-2x-width: 72px;
 $bike-2x-height: 70px;
-$bike-2x-total-width: 148px;
+$bike-2x-total-width: 224px;
 $bike-2x-total-height: 144px;
 $bike-2x-image: '../img/sprite/bus@2x.png';
-$bike-2x: (0px, 0px, 0px, 0px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'bike@2x', );
+$bike-2x: (0px, 0px, 0px, 0px, 72px, 70px, 224px, 144px, '../img/sprite/bus@2x.png', 'bike@2x', );
 $bus-2x-name: 'bus@2x';
 $bus-2x-x: 76px;
 $bus-2x-y: 0px;
@@ -73,10 +95,10 @@ $bus-2x-offset-x: -76px;
 $bus-2x-offset-y: 0px;
 $bus-2x-width: 72px;
 $bus-2x-height: 70px;
-$bus-2x-total-width: 148px;
+$bus-2x-total-width: 224px;
 $bus-2x-total-height: 144px;
 $bus-2x-image: '../img/sprite/bus@2x.png';
-$bus-2x: (76px, 0px, -76px, 0px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'bus@2x', );
+$bus-2x: (76px, 0px, -76px, 0px, 72px, 70px, 224px, 144px, '../img/sprite/bus@2x.png', 'bus@2x', );
 $car-2x-name: 'car@2x';
 $car-2x-x: 0px;
 $car-2x-y: 74px;
@@ -84,31 +106,53 @@ $car-2x-offset-x: 0px;
 $car-2x-offset-y: -74px;
 $car-2x-width: 72px;
 $car-2x-height: 70px;
-$car-2x-total-width: 148px;
+$car-2x-total-width: 224px;
 $car-2x-total-height: 144px;
 $car-2x-image: '../img/sprite/bus@2x.png';
-$car-2x: (0px, 74px, 0px, -74px, 72px, 70px, 148px, 144px, '../img/sprite/bus@2x.png', 'car@2x', );
+$car-2x: (0px, 74px, 0px, -74px, 72px, 70px, 224px, 144px, '../img/sprite/bus@2x.png', 'car@2x', );
 $search-white-2x-name: 'search-white@2x';
-$search-white-2x-x: 76px;
+$search-white-2x-x: 152px;
 $search-white-2x-y: 74px;
-$search-white-2x-offset-x: -76px;
+$search-white-2x-offset-x: -152px;
 $search-white-2x-offset-y: -74px;
 $search-white-2x-width: 28px;
 $search-white-2x-height: 32px;
-$search-white-2x-total-width: 148px;
+$search-white-2x-total-width: 224px;
 $search-white-2x-total-height: 144px;
 $search-white-2x-image: '../img/sprite/bus@2x.png';
-$search-white-2x: (76px, 74px, -76px, -74px, 28px, 32px, 148px, 144px, '../img/sprite/bus@2x.png', 'search-white@2x', );
-$spritesheet-width: 74px;
+$search-white-2x: (152px, 74px, -152px, -74px, 28px, 32px, 224px, 144px, '../img/sprite/bus@2x.png', 'search-white@2x', );
+$user2-2x-name: 'user2@2x';
+$user2-2x-x: 76px;
+$user2-2x-y: 74px;
+$user2-2x-offset-x: -76px;
+$user2-2x-offset-y: -74px;
+$user2-2x-width: 72px;
+$user2-2x-height: 70px;
+$user2-2x-total-width: 224px;
+$user2-2x-total-height: 144px;
+$user2-2x-image: '../img/sprite/bus@2x.png';
+$user2-2x: (76px, 74px, -76px, -74px, 72px, 70px, 224px, 144px, '../img/sprite/bus@2x.png', 'user2@2x', );
+$user-2x-name: 'user@2x';
+$user-2x-x: 152px;
+$user-2x-y: 0px;
+$user-2x-offset-x: -152px;
+$user-2x-offset-y: 0px;
+$user-2x-width: 72px;
+$user-2x-height: 70px;
+$user-2x-total-width: 224px;
+$user-2x-total-height: 144px;
+$user-2x-image: '../img/sprite/bus@2x.png';
+$user-2x: (152px, 0px, -152px, 0px, 72px, 70px, 224px, 144px, '../img/sprite/bus@2x.png', 'user@2x', );
+$spritesheet-width: 112px;
 $spritesheet-height: 72px;
 $spritesheet-image: '../img/sprite/bus.png';
-$spritesheet-sprites: ($bike, $bus, $car, $search-white, );
-$spritesheet: (74px, 72px, '../img/sprite/bus.png', $spritesheet-sprites, );
-$retina-spritesheet-width: 148px;
+$spritesheet-sprites: ($bike, $bus, $car, $search-white, $user, $user2, );
+$spritesheet: (112px, 72px, '../img/sprite/bus.png', $spritesheet-sprites, );
+$retina-spritesheet-width: 224px;
 $retina-spritesheet-height: 144px;
 $retina-spritesheet-image: '../img/sprite/bus@2x.png';
-$retina-spritesheet-sprites: ($bike-2x, $bus-2x, $car-2x, $search-white-2x, );
-$retina-spritesheet: (148px, 144px, '../img/sprite/bus@2x.png', $retina-spritesheet-sprites, );
+$retina-spritesheet-sprites: ($bike-2x, $bus-2x, $car-2x, $search-white-2x, $user2-2x, $user-2x, );
+$retina-spritesheet: (224px, 144px, '../img/sprite/bus@2x.png', $retina-spritesheet-sprites, );
 
 /*
 These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
@@ -123,7 +167,11 @@ $car-group-name: 'car';
 $car-group: ('car', $car, $car-2x, );
 $search-white-group-name: 'search-white';
 $search-white-group: ('search-white', $search-white, $search-white-2x, );
-$retina-groups: ($bike-group, $bus-group, $car-group, $search-white-group, );
+$user-group-name: 'user';
+$user-group: ('user', $user, $user2-2x, );
+$user2-group-name: 'user2';
+$user2-group: ('user2', $user2, $user-2x, );
+$retina-groups: ($bike-group, $bus-group, $car-group, $search-white-group, $user-group, $user2-group, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
